kubernetes/easyshop-service.yml
apiVersion: v1 
kind: Service 

metadata:
  name: easyshop-service
  namespace: easyshop

spec:
  type: ClusterIP

  selector:
    app: easyshop

  ports:
    - port: 80
      targetPort: 3000
