kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: easyshop

spec: 
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017

  selector:
    app: mongodb
